<resources>
    <string name="app_name">StoreSmartApp</string>
    <string name="fridge">Hűtő</string>
    <string name="shop">Bevásárlás</string>
    <string name="food">Food</string>
    <string name="fridge_item">FridgeItem</string>
    <string name="bestbefore">BestBefore:</string>
    <string name="unit">unit</string>
    <string name="item_name">Name of Item:</string>
    <string name="category">Category:</string>
    <string name="quantity">Quantity:</string>
    <string name="new_fridge_item">New Fridge Item</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_all_item">Delete All Fridge Item</string>
    <string name="alert_dialog_continue_text">Do You wish to continue?</string>
    <string name="alert_delete_all_frdigeitem">You are about to delete all item.</string>
    <string name="Yes">Yes</string>
    <string name="add_item">AddItem</string>
    <string name="delete_all">DeleteAll</string>
    <string name="edit_fridge_item">Edit Fridge Item</string>
    <string name="shop_item_name">ShopItemName</string>
    <string name="expired">Expired</string>


    <string-array name="category_items">
        <item>Dairy</item>
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Frozen</item>
    </string-array>

    <string-array name="uom_items">
        <item>KG</item>
        <item>LBS</item>
        <item>DB</item>
        <item>L</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price:</string>
    <string name="currency">Ft</string>
    <string name="edit_grocery">Edit Grocery</string>
    <string name="new_grocery">New Grocery</string>
    <string name="expired_to_shoppinglist">Exp. to ShoppingList</string>
    <string name="add_to_cart_title">Importing expired Items to ShoppingList</string>
    <string name="add_to_cart_alert">"This will create a new Shopping List!\n Do you wish to continue? "</string>
    <string name="bought_to_fridge">Bought to Fridge</string>
    <string name="add_to_fridge_title">Add bought items to fridge</string>
    <string name="bought">Bought</string>
    <string name="expirechannel">expirechannel</string>
    <string name="notification_channel_title">fridgeItemExpiredNotificationChannel</string>
    <string name="notification_channel_desc">Channel for Alarm Manager</string>
    <string name="orderbyname">OrderByName</string>
    <string name="orderbytipe">OrderByTipe</string>
    <string name="smartfridge">SmartFridge</string>
</resources>